--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -130,10 +130,10 @@ plugin_rest_usercreation_next=Weiter
 plugin_rest_usercreation_page1=Account
 plugin_rest_usercreation_page2=Einrichtung
 plugin_rest_usercreation_page3=Ansprechpartner
+plugin_rest_usercreation_page4=Weitere Informationen
 plugin_rest_usercreation_page5=\u00DCbersicht
 plugin_rest_usercreation_password=Passwort
 plugin_rest_usercreation_requiredField=Das Feld ist ein Pflichtfeld.
-plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-required__asterisk"></i> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
 plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-required__asterisk"></i> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
 plugin_rest_usercreation_userName=Benutzername
 plugin_rest_usercreation_fbLink=https://www.facebook.com/zentralundlandesbibliothekberlin
@@ -177,4 +177,3 @@ plugin_rest_usercreation_new_account_confirm_helpImg=<img src="https://via.place
 plugin_rest_usercreation_new_account_confirm_helpBody2=Text unterhalb des Bildes
 
 plugin_dashboard_delivery_noFileUploaded=Um fortzufahren, muss mindestens ein Dokument hochgeladen werden.
-
