--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -184,3 +184,80 @@ plugin_rest_usercreation_pwReset_heading=Passwort zur\u00FCcksetzen
 plugin_rest_usercreation_pwReset_label=Nutzername oder E-Mail-Adresse
 plugin_rest_usercreation_pwReset_message=Nach Absenden des Formulars wird ein neues Passwort an die von Ihnen hinterlegte E-Mail-Adresse gesendet.
 
+plugin_dashboard_delivery_info_noData=Bisher wurden keine Daten abgeliefert
+
+plugin_dashboard_delivery_main_helpHeader=Hilfe zu den Auswahlm\u00F6glichkeiten
+plugin_dashboard_delivery_main_helpBody1=Hilfetext \u00FCber dem Bild
+plugin_dashboard_delivery_main_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_main_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_monograph_upload_helpHeader=Hilfe zum Upload von Monografien
+plugin_dashboard_delivery_monograph_upload_helpBody1=Hilfetext \u00FCber dem Bild
+plugin_dashboard_delivery_monograph_upload_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_monograph_upload_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_monograph_data1_helpHeader=Hilfe zum Upload von Monografien (data1)
+plugin_dashboard_delivery_monograph_data1_helpBody1=Hilfetext \u00FCber dem Bild
+plugin_dashboard_delivery_monograph_data1_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_monograph_data1_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_monograph_data2_helpHeader=Hilfe zum Upload von Monografien (data2)
+plugin_dashboard_delivery_monograph_data2_helpBody1=Hilfetext \u00FCber dem Bild
+plugin_dashboard_delivery_monograph_data2_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_monograph_data2_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_monograph_data3_helpHeader=Hilfe zum Upload von Monografien (data3)
+plugin_dashboard_delivery_monograph_data3_helpBody1=Hilfetext \u00FCber dem Bild
+plugin_dashboard_delivery_monograph_data3_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_monograph_data3_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_monograph_overview_helpHeader=Hilfe zum Upload von Monografien (overview)
+plugin_dashboard_delivery_monograph_overview_helpBody1=Hilfetext \u00FCber dem Bild
+plugin_dashboard_delivery_monograph_overview_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_monograph_overview_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_journals_new_helpHeader=Hilfe zum Upload von Periodischen Publikationen (Auswahl)
+plugin_dashboard_delivery_journals_new_helpBody1=Hilfetext \u00FCber dem Bild
+plugin_dashboard_delivery_journals_new_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_journals_new_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_journals_newTitle_helpHeader=Hilfe zum Upload von Periodischen Publikationen (Neuen Titel erfassen)
+plugin_dashboard_delivery_journals_newTitle_helpBody1=Hilfetext \u00DCber dem Bild
+plugin_dashboard_delivery_journals_newTitle_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_journals_newTitle_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_journals_issueupload_helpHeader=Hilfe zum Upload von Periodischen Publikationen (Ausgabe hinzuf\u00FCgen)
+plugin_dashboard_delivery_journals_issueupload_helpBody1=Hilfetext \u00DCber dem Bild
+plugin_dashboard_delivery_journals_issueupload_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_journals_issueupload_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_journals_newIssue_helpHeader=Hilfe zum Upload von Periodischen Publikationen (Neue Ausgabe: Daten eingeben)
+plugin_dashboard_delivery_journals_newIssue_helpBody1=Hilfetext \u00DCber dem Bild
+plugin_dashboard_delivery_journals_newIssue_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_journals_newIssue_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_userdata_options_helpHeader=Hilfe zu "Eigene Daten bearbeiten (Auswahl)"
+plugin_dashboard_delivery_userdata_options_helpBody1=Hilfetext \u00DCber dem Bild
+plugin_dashboard_delivery_userdata_options_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_userdata_options_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_userdata_user_helpHeader=Hilfe zu "Eigene Daten bearbeiten"
+plugin_dashboard_delivery_userdata_user_helpBody1=Hilfetext \u00DCber dem Bild
+plugin_dashboard_delivery_userdata_user_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_userdata_user_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_userdata_institution_helpHeader=Hilfe zu "Einrichtung verwalten"
+plugin_dashboard_delivery_userdata_institution_helpBody1=Hilfetext \u00DCber dem Bild
+plugin_dashboard_delivery_userdata_institution_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_userdata_institution_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_userdata_contact_helpHeader=Hilfe zu "Eigene Daten bearbeiten (Auswahl)"
+plugin_dashboard_delivery_userdata_contact_helpBody1=Hilfetext \u00DCber dem Bild
+plugin_dashboard_delivery_userdata_contact_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_userdata_contact_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
+plugin_dashboard_delivery_existingData_helpHeader=Hilfe zu "Bisherige Datenlieferungen"
+plugin_dashboard_delivery_existingData_contact_helpBody1=Hilfetext \u00DCber dem Bild
+plugin_dashboard_delivery_existingData_helpBody2=Hilfetext unter dem Bild
+plugin_dashboard_delivery_existingData_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+
