--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -1,5 +1,8 @@
 intranda_administration_deliveryManagement=Verwaltung von Abliefernden
 
+plugin_administration_deliveryManagement_uploadFile=XML-Datei hochladen
+plugin_administration_deliveryManagement_uploadInstitutionData=Stammdaten importieren
+plugin_administration_deliveryManagement_downloadInstitutionData=Stammdaten exportieren
 plugin_administration_deliveryManagement_displayMode_institution=Einrichtungen
 plugin_administration_deliveryManagement_displayMode_privacyPolicy=Datenschutzerkl\u00E4rung
 plugin_administration_deliveryManagement_displayMode_user=Benutzer
