--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -263,6 +263,7 @@ plugin_dashboard_delivery_existingData_helpHeader=Hilfe zu "Bisherige Datenliefe
 plugin_dashboard_delivery_existingData_contact_helpBody1=Hilfetext \u00DCber dem Bild
 plugin_dashboard_delivery_existingData_helpBody2=Hilfetext unter dem Bild
 plugin_dashboard_delivery_existingData_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
+plugin_dashboard_delivery_template_title=E-Pflicht
 
 intranda_workflow_processinspection=Pr\u00FCf-Ansicht
 plugin_workflow_processinspection_image=Erste Seite
